--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ font-family: helvetica;
 width:500px;
 margin:20px 20px 0px 20px;}
 
-
+a{text-decoration: none;}
+.icon{font-size: x-large;}
 .about{margin:50px 20px 20px 30px;}
 h1{font-size: 40px;}
 p{font-size: 18px;}
